ansible/roles/k8s_addon_cilium/files/cilium-ingress-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-ingress-gateway

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: cilium-ingress-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.178.246
  listeners:
    - name: http-k8s-home-arpa
      hostname: "*.k8s.home.arpa"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
